# my_course_work_2024_3_1

./: CMakeLists.txt  CMakePresets.json  README.md
Kuzya/: CMakeLists.txt
Kuzya/Include/: Kuzya.h
Kuzya/Src/Startup/: main.cpp
TestKuzya/: CMakeLists.txt
TestKuzya/Include/: Kuzya.h
TestKuzya/Src/: TestStreebog256.cpp  TestStreebog512.cpp
cmake/: FindMSUnitTestFramework.cmake
